--- a/css/custom.css
+++ b/css/custom.css
@@ -7,8 +7,7 @@ body {
 
 .container {
   width: 40rem;
-  margin: 0 auto;
-  background: #f8f8f8; }
+  margin: 0 auto; }
   .container__form {
     padding: 3rem 0;
     background: #2a88ae;
